--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,175 @@
-# local package
 -e .
-
-# external requirements
-click
-Sphinx
-coverage
-awscli
-flake8
-python-dotenv>=0.5.1
+absl-py==0.9.0
+alembic==1.0.5
+appnope==0.1.0
+arrow==0.15.5
+astor==0.8.1
+atomicwrites==1.3.0
+attrs==19.3.0
+autoenv==1.0.0
+autopep8==1.5
+awesome-slugify==1.6.5
+backcall==0.1.0
+bcrypt==3.1.5
+beautifulsoup4==4.8.2
+binaryornot==0.4.4
+bleach==3.1.0
+cachetools==4.0.0
+certifi==2019.9.11
+cffi==1.11.5
+chardet==3.0.4
+Click==7.0
+click-spinner==0.1.8
+cloudinary==1.18.2
+colorama==0.4.1
+cookiecutter==1.7.0
+coremltools==3.3
+cycler==0.10.0
+d2l==0.11.3
+decorator==4.4.1
+defusedxml==0.6.0
+entrypoints==0.3
+et-xmlfile==1.0.1
+flake8==3.7.9
+Flask==1.0.2
+Flask-Bcrypt==0.7.1
+Flask-Login==0.4.1
+Flask-Markdown==0.3
+Flask-Migrate==2.3.1
+Flask-MySQL==1.4.0
+Flask-SimpleMDE==0.3.0
+Flask-SQLAlchemy==2.3.2
+Flask-WTF==0.14.2
+future==0.18.2
+gast==0.2.2
+geocoder==1.38.1
+google-auth==1.11.2
+google-auth-oauthlib==0.4.1
+google-pasta==0.1.8
+graphviz==0.8.4
+grpcio==1.27.2
+h5py==2.10.0
+idna==2.7
+importlib-metadata==1.1.0
+infinity==1.4
+intervals==0.8.1
+ipykernel==5.1.3
+ipython==7.11.1
+ipython-genutils==0.2.0
+ipywidgets==7.5.1
+itsdangerous==1.1.0
+jdcal==1.4.1
+jedi==0.15.2
+Jinja2==2.10
+jinja2-time==0.2.0
+joblib==0.14.1
+jsonschema==3.2.0
+jupyter-client==5.3.4
+jupyter-console==6.0.0
+jupyter-contrib-core==0.3.3
+jupyter-contrib-nbextensions==0.5.1
+jupyter-core==4.6.1
+jupyter-highlight-selected-word==0.2.0
+jupyter-latex-envs==1.4.6
+jupyter-nbextensions-configurator==0.4.1
+Keras==2.3.1
+Keras-Applications==1.0.8
+Keras-Preprocessing==1.1.0
+kiwisolver==1.1.0
+llvmlite==0.31.0
+lxml==4.5.0
+Mako==1.0.7
+Markdown==3.0.1
+MarkupSafe==1.1.0
+matplotlib==3.1.3
+mccabe==0.6.1
+mistune==0.8.4
+mock==3.0.5
+more-itertools==8.0.0
+mxnet==1.6.0b20190915
+mysql-connector-python==8.0.14
+nbconvert==5.6.1
+nbformat==5.0.3
+nltk==3.5
+notebook==6.0.2
+numba==0.48.0
+numpy==1.18.1
+oauthlib==3.1.0
+opencage==1.2
+openpyxl==3.0.3
+opt-einsum==3.1.0
+packaging==19.2
+pandas==1.0.1
+pandocfilters==1.4.2
+parso==0.5.2
+pexpect==4.7.0
+pickleshare==0.7.5
+Pillow==5.4.0
+pluggy==0.13.1
+poyo==0.5.0
+prettytable==0.7.2
+prometheus-client==0.7.1
+prompt-toolkit==2.0.10
+protobuf==3.11.3
+ptyprocess==0.6.0
+pur==5.3.0
+py==1.8.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycodestyle==2.5.0
+pycparser==2.19
+pyflakes==2.1.1
+Pygments==2.5.2
+PyMySQL==0.9.3
+pyparsing==2.4.5
+pyrsistent==0.15.7
+PySocks==1.7.1
+pytest==5.3.1
+python-dateutil==2.7.5
+python-dotenv==0.11.0
+python-editor==1.0.3
+pytz==2019.3
+PyYAML==5.3
+pyzmq==18.1.1
+qtconsole==4.6.0
+ratelim==0.1.6
+regex==2019.1.24
+requests==2.20.0
+requests-oauthlib==1.3.0
+resampy==0.2.1
+rsa==4.0
+scipy==1.4.1
+seaborn==0.10.0
+selenium==3.141.0
+Send2Trash==1.5.0
+six==1.12.0
+soupsieve==2.0
+SQLAlchemy==1.2.15
+SQLAlchemy-Utils==0.36.1
+tensorboard==2.1.0
+tensorflow==2.1.0
+tensorflow-estimator==2.1.0
+termcolor==1.1.0
+terminado==0.8.3
+testpath==0.4.4
+tornado==6.0.3
+tqdm==4.45.0
+traitlets==4.3.3
+turicreate==6.1
+tweepy==3.8.0
+Unidecode==0.4.21
+urllib3==1.24.3
+validators==0.14.1
+virtualenv==16.7.9
+wcwidth==0.1.7
+webencodings==0.5.1
+Werkzeug==0.14.1
+whichcraft==0.6.1
+widgetsnbextension==3.5.1
+wrapt==1.12.0
+wtf-tinymce==0.1.3
+WTForms==2.2.1
+WTForms-Alchemy==0.16.9
+WTForms-Components==0.10.4
+xlrd==1.2.0
+zipp==0.6.0
